fix alignment

--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,14 +1,12 @@
 .project {
-  margin: 0 10rem 5rem;
-  /* display: flex;
-  justify-content: space-evenly;
-  align-items: center; */
+  /* margin: 0 10rem 5rem; */
 }
 .projectImg {
-  width: 30rem;
+  max-width: 30rem;
   height: 30rem;
 }
 .img {
   width: 100%;
   height: 100%;
+  /* object-fit: contain; */
 }
